<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/vct_div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vct_div"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/horizontal_divider"
        app:layout_constraintTop_toBottomOf="@+id/fragment"
        app:layout_constraintBottom_toTopOf="@+id/home_layout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/home_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vct_div">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <View
                android:id="@+id/vct_home"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:background="@drawable/home_terracotta" />

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textAlignment="center"
                android:textColor="@color/terracotta"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <View
                android:id="@+id/vct_transact"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:clickable="true"
                android:background="@drawable/transaction" />

            <TextView
                android:id="@+id/tv_transact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transactionList"
                android:textColor="@color/light_grey"
                android:textAlignment="center"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <View
                android:id="@+id/vct_profile"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/profile" />

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile"
                android:textColor="@color/light_grey"
                android:textAlignment="center"
                android:clickable="true"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <View
                android:id="@+id/vct_logout"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/logout" />

            <TextView
                android:id="@+id/tv_logut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/logout"
                android:textColor="@color/light_grey"
                android:textAlignment="center"
                android:clickable="true"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>